Bug 1081010 - Part 2: Fix -Wswitch warnings in dom/plugins and enable -Werror=switch warning-as-error. r=bsmedberg